# tsukkomi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  TODO.md  flake.nix
.cargo/: config.toml
.codestable/: attention.md
.codestable/hooks/: hooks.codex.json
.codestable/reference/: approval-conventions.md  branch-guard-hooks.md  code-dimensions.md  execution-conventions.md  goal-conventions.md  maintainer-notes.md  requirement-example.md  shared-conventions.md  spec-governance-tools.md  system-overview.md  tools-context.md  tools.md
.codestable/tools/: build-context-packet.py  build-review-packet.py  check-context-sufficiency.py  codestable-ai-branch-guard.py  codestable-backlog.py  codestable-doctor.py  codestable-finish-worktree.py  codestable-implementation-gate.sh  codestable-main-publish.py  codestable-spec-governance.py  codestable-worktree-gate.py  codestable-worktree-inbox.py  codestable_common.py  plan-commits.py  search-yaml.py  validate-implementation-review.py  validate-yaml.py
.github/workflows/: check.yml
.opencode/agents/: web-search.md
.opencode/skills/research-deep/: SKILL.md
crates/tsukkomi/: Cargo.toml
crates/tsukkomi-matrix/: Cargo.toml
crates/tsukkomi-matrix/src/: main.rs
crates/tsukkomi-telegram/: Cargo.toml
crates/tsukkomi-telegram/src/: main.rs
crates/tsukkomi/prompts/: default.md  describe_image.md  summary.md
crates/tsukkomi/src/: chat.rs  cli.rs  compactor.rs  lib.rs  memory.rs  store.rs  window.rs
crates/tsukkomi/src/memory/: file.rs  mod.rs  remembering.rs  store.rs  utils.rs
docs/: genai-usage.md  matrix-rust-sdk-research.md  rig-framework-research.md  rust-ai-libs-comparison.md  teloxide-research.md
nixos/: tsukkomi.nix
src/: main.rs
