[workspace]
resolver = "2"
members = ["crates/tsukkomi", "crates/tsukkomi-telegram", "crates/tsukkomi-matrix"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
anyhow = "*"
base64 = "*"
infer = "*"
thiserror = "*"
teloxide = "*"
matrix-sdk = "*"
rig = { version = "*", default-features = false, features = ["memory"] }
clap = { version = "*", features = ["derive", "env"] }
chrono = "*"
serde_json = "*"
