[workspace]
resolver = "2"
members = ["crates/tsukkomi", "crates/tsukkomi-telegram", "crates/tsukkomi-matrix"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
anyhow = "*"
infer = "*"
thiserror = "*"
teloxide = "*"
matrix-sdk = "*"
rig = { version = "*", default-features = false, features = ["memory"] }
base64 = "*"
clap = { version = "*", features = ["derive", "env"] }
chrono = { version = "*", default-features = false, features = ["std", "serde", "clock"] }
serde_json = "*"
serde = { version = "*", features = ["derive"] }
schemars = { version = "*", features = ["derive", "chrono04"] }
humantime = "*"

[workspace.dependencies.tempfile]
version = "*"
