[package]
name = "tsukkomi-matrix"
version.workspace = true
edition.workspace = true

[dependencies]
tsukkomi = { path = "../tsukkomi" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
matrix-sdk.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap = { workspace = true }
