[package]
name = "tsukkomi-matrix"
version.workspace = true
edition.workspace = true

[dependencies]
tsukkomi = { path = "../tsukkomi" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
matrix-sdk.workspace = true
tracing.workspace = true
anyhow.workspace = true
base64 = { workspace = true }
infer = { workspace = true }
chrono.workspace = true
clap = { workspace = true }
serde_json = { workspace = true }
