[package]
name = "tsukkomi-telegram"
version.workspace = true
edition.workspace = true

[dependencies]
tsukkomi = { path = "../tsukkomi" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
teloxide = { workspace = true, features = ["macros"] }
tracing.workspace = true
anyhow.workspace = true
base64 = { workspace = true }
infer = { workspace = true }
chrono.workspace = true
clap = { workspace = true }
