[package]
name = "tsukkomi"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rig = { workspace = true }
clap = { workspace = true }
serde = { version = "*", features = ["derive"] }
serde_json = { workspace = true }
schemars = { version = "*", features = ["derive", "chrono04"] }
chrono = { version = "*", default-features = false, features = ["std", "serde"] }
async-fd-lock = "*"
humantime = "*"
