[package]
name = "tsukkomi"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rig.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono.workspace = true
base64.workspace = true
humantime.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile.workspace = true
